...
        }

        Row (verticalAlignment = Alignment.CenterVertically, modifier = Modifier.padding(10.dp)){
            Text("Dark mode", fontSize = 22.sp, modifier = Modifier.padding(horizontal = 5.dp))

            Switch(
                modifier = Modifier.testTag("nightMode"),
                checked = checkedState.value,
                onCheckedChange = {
                    checkedState.value = it
                    changeTheme(checkedState.value)
                    activity.recreate()
                }
...
